force-app/main/default/objects/DVC_Tour_Availability__c/DVC_Tour_Availability__c.object-meta.xml
<CustomObject>
    <label>Tour Availability</label>
    <pluralLabel>Tour Availabilities</pluralLabel>
    <nameField>
        <type>AutoNumber</type>
        <label>Tour Availability Name</label>
        <displayFormat>TA-{0000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>DMS-4909: Represents one day&apos;s operating schedule for a single Tour Location (one record per Location + Availability Date + Slot Type). Created only when a schedule is Published; the interactive preview does not persist this object. See LLD docs/DMS-4909-LLD.md.</description>
</CustomObject>