force-app/main/default/objects/DVC_Tour_Availability__c/fields/DVC_Availability_Date__c.field-meta.xml
<CustomField>
    <fullName>DVC_Availability_Date__c</fullName>
    <label>Availability Date</label>
    <type>Date</type>
    <required>true</required>
    <description>The single calendar day this schedule/slot set applies to. One record exists per Location + Date + Slot Type.</description>
</CustomField>