force-app/main/default/objects/DVC_Tour_Availability__c/fields/DVC_Location_Date_Key__c.field-meta.xml
<CustomField>
    <fullName>DVC_Location_Date_Key__c</fullName>
    <label>Location + Date + Slot Type Key</label>
    <type>Text</type>
    <length>255</length>
    <unique>true</unique>
    <externalId>true</externalId>
    <description>System-managed composite key = DVC_Tour_Location__c + DVC_Availability_Date__c + DVC_Slot_Type__c, populated by DVC_TourSlotGenerationService/DVC_TourSlotGenerationBatch before insert to enforce the uniqueness rule in LLD Section 15. Never edited directly by users.</description>
</CustomField>