force-app/main/default/objects/DVC_Tour_Availability__c/fields/DVC_Lunch_Block_Needed__c.field-meta.xml
<CustomField>
    <fullName>DVC_Lunch_Block_Needed__c</fullName>
    <label>Lunch Block Needed?</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>When true, Lunch Start/End Time become required and any generated slot row overlapping the lunch window is forced to zero capacity (UAC5-7).</description>
</CustomField>