force-app/main/default/objects/DVC_Tour_Availability__c/fields/DVC_Lunch_End_Time__c.field-meta.xml
<CustomField>
    <fullName>DVC_Lunch_End_Time__c</fullName>
    <label>Lunch End Time</label>
    <type>Time</type>
    <description>Conditionally required when DVC_Lunch_Block_Needed__c is true. Must be later than Lunch Start Time and within the Operating Start/End window (VR-06).</description>
</CustomField>