force-app/main/default/objects/DVC_Tour_Availability__c/fields/DVC_Lunch_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>DVC_Lunch_Start_Time__c</fullName>
    <label>Lunch Start Time</label>
    <type>Time</type>
    <description>Conditionally required when DVC_Lunch_Block_Needed__c is true. Must fall within the Operating Start/End window (VR-06).</description>
</CustomField>