force-app/main/default/objects/DVC_Tour_Availability__c/fields/DVC_Operating_End_Time__c.field-meta.xml
<CustomField>
    <fullName>DVC_Operating_End_Time__c</fullName>
    <label>Operating End Time</label>
    <type>Time</type>
    <required>true</required>
    <description>Closing time for the location on this date. Must be later than Operating Start Time (VR-04).</description>
</CustomField>