force-app/main/default/objects/DVC_Tour_Availability__c/fields/DVC_Operating_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>DVC_Operating_Start_Time__c</fullName>
    <label>Operating Start Time</label>
    <type>Time</type>
    <required>true</required>
    <description>Opening time for the location on this date. Must be earlier than Operating End Time (VR-04).</description>
</CustomField>