force-app/main/default/objects/DVC_Tour_Availability__c/fields/DVC_Slot_Interval__c.field-meta.xml
<CustomField>
    <fullName>DVC_Slot_Interval__c</fullName>
    <label>Slot Interval</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>15 Minutes</fullName>
            </value>
            <value>
                <fullName>30 Minutes</fullName>
                <default>true</default>
                <label>30 Minutes</label>
            </value>
            <value>
                <fullName>60 Minutes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
    <description>Cadence used to generate fixed-width slot rows across the operating window (UAC12-16). Each generated DVC_Tour_Availability_Slot__c row is exactly this width - see LLD Section 10.1.</description>
</CustomField>