force-app/main/default/objects/DVC_Tour_Availability__c/fields/DVC_Slot_Type__c.field-meta.xml
<CustomField>
    <fullName>DVC_Slot_Type__c</fullName>
    <label>Slot Type</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Onsite</fullName>
                <default>true</default>
                <label>Onsite</label>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
    <description>DMS-4909 only ever creates Onsite records. Event is reserved for the separate Event/Group tab story, which reuses this same object. Part of the DVC_Location_Date_Key__c uniqueness composite (LLD Section 15).</description>
</CustomField>